# httpreq-sqmod

./: CMakeLists.txt
build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  httpreq-sqmod.sln
build32/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build32/cpr/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cpr.sln
build32/cpr-download/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpr-download.sln  cpr-download.vcxproj  cpr-download.vcxproj.filters
build32/cpr-download/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build32/cpr-download/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build32/cpr-download/cpr-download-prefix/tmp/: cpr-download-gitclone.cmake  cpr-download-gitupdate.cmake
build32/cpr/cpr/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cpr.vcxproj  cpr.vcxproj.filters
build32/cpr/cpr/cpr.dir/Release/cpr.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+7 more)
build32/cpr/opt/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build32/cpr/opt/curl/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CURL.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  curl-config  libcurl.pc  uninstall.vcxproj  uninstall.vcxproj.filters
build32/cpr/opt/curl/CMake/: cmake_uninstall.cmake
build32/cpr/opt/curl/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  curl_config.h  libcurl.vcxproj  libcurl.vcxproj.filters
build32/httpreq-sqmod/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  mod_httprequest.vcxproj  mod_httprequest.vcxproj.filters
build32/httpreq-sqmod/Release/: mod_httprequest.exp  mod_httprequest.lib
build32/httpreq-sqmod/mod_httprequest.dir/Release/mod_httprequest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mod_httprequest.lastbuildstate  mod_httprequest.write.1u.tlog
build32/lib/Release/: cpr.lib  libcurl.lib
httpreq-sqmod/: CMakeLists.txt  CRequest.h  CResponse.cpp  CResponse.h  Common.hpp  Events.cpp  Events.h  Misc.cpp  Misc.h  Module.cpp
src/: CMakeLists.txt  CRequest.cpp  CResponse.h  Common.cpp  Common.hpp  Events.cpp  Module.cpp  includes.h
(+15 files in other folders)
